@@ -1,5 +1,5 @@
 
-LilyPond development is hosted at savannah.gnu.org/projects/lilypond
+LilyPond development is hosted at http://savannah.gnu.org/projects/lilypond
 
 Here is an attempt at a simple explanation of the directory layout for
 LilyPond's source files.
