@@ -15,8 +15,11 @@
 struct Separation_item
 {
   static bool has_interface (Grob*);
-  static Interval my_width (Grob*) ;
+  static Interval conditional_width (Grob*,Grob*) ;
+  static Interval width (Grob*) ;
+
   static void add_item (Grob*,Item*);
+  static void add_conditional_item (Grob*,Grob*);  
 };
 
 #endif /* SINGLE_MALT_GROUPING_ITEM_HH */
